# gluefiles

./: .gitignore  CMakeLists.txt  README.md  gluefiles.cpp  gluefiles.desktop  main.cpp  translations.qrc
cmake/: windeployqt.cmake
core/: Glue.cpp  Glue.h
i18n/: gluefiles_es.ts
ui/: FileListWidget.cpp  FileListWidget.h  MainWindow.cpp  MainWindow.h
utils/: FileConstants.h
